--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,14 @@ header {
 
 }
 
-
+.main-nav {
+  margin-left: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: center;
+  width: 100%;
+}
 
 
 .navbar {
