--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ header {
   background-color: rgb(78, 6, 6);
   width: 100%;
   
+  
 }
 
 header h1 {
@@ -101,7 +102,7 @@ header h1 {
 
 
 .review-card {
-  width: auto;
+  width: 20rem;
   border-radius: 10%;
   border: 1px solid black;
 }
@@ -148,6 +149,30 @@ header h1 {
   align-items: center;
 }
 
+.comments-container {
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+hr {
+  width: 10rem;
+}
+
+.comments-container ul {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  gap: 2rem;
+}
+
+
+
 
 #category-tag {
   text-transform: capitalize;
@@ -184,7 +209,8 @@ header h1 {
 
   header {
     padding: 1vh;
-    margin: 1vh;
+    margin: 1vw;
+    width: auto;
   }
 
   .App {
@@ -195,7 +221,8 @@ header h1 {
   .main-nav {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    
+    margin-left: 1rem;
+    margin-right: 1rem;
     
   }
 
