--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,7 @@
 
 
 
-/* #light {
-  color: rgb(78, 6, 6);
-} */
+
 
 #dark {
   background-color: #202634;
@@ -29,6 +27,14 @@
   background-color: #202634;
   color: white;
   border: none;
+}
+
+#dark .delete-btn {
+  background-color: #4d5061
+}
+
+#dark #comment-btn {
+  background-color: #4d5061
 }
 
 #dark .info-card {
@@ -73,23 +79,19 @@ li {
   position: relative;
 }
 
-img {
-  /* min-width: 100%;
-  min-height: 100%; */
-  /* width: auto;
-  height: auto; */
-  width: 20rem;
-  height: 20rem;
-  /* border-radius: 20px; */
-}
-
 
 
 .review-card {
   width: 20rem;
   border-radius: 20px;
-  /* border: 1px solid rgb(78, 6, 6); */
   
+  
+}
+
+.review-card img {
+  border-radius: 20px;
+  width: 20rem;
+  height: 20rem;
 }
 
 
@@ -121,7 +123,6 @@ select {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0);
   font-size: 1rem;
   font-weight: 600;
-  /* padding: 1em 1.5em; */
   border: 0; 
   
 }
@@ -175,8 +176,7 @@ main {
 
 
 .App {
-  /* width: 100%;
-  height: 100%; */
+  
   text-align: center;
   display:flex;
   flex-direction: column;
@@ -198,7 +198,7 @@ main {
 
 
 .navbar {
-  /* margin-right: 5.4rem; */
+ 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -225,8 +225,7 @@ main {
 
 
 .home {
-  /* margin: 50vh; */
-  margin-top: 5rem;
+  margin-top: 15rem;
   font-size: 2em;
   display: flex;
   flex-direction: column;
@@ -235,7 +234,7 @@ main {
 }
 
 .gallery {
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 5vh;
@@ -288,9 +287,7 @@ main {
   align-items: left;
   gap: 2rem;
   width: 100%;
-  /* border: 1px solid rgb(78, 6, 6); */
   max-width: 50rem;
-  /* border-radius: 5%; */
   text-align: left;
 }
 
@@ -379,12 +376,12 @@ main {
   height: 7rem;
   position: absolute;
   background-color: white;
-  right: 5%;
-  bottom: 5%;
+  right: 10%;
+  bottom: 1%;
   gap: 3rem;
   box-shadow:  -2px -2px 10px #ffffff73,
      5px 5px 10px rgba(0, 0, 0, 0.568);
-  
+  border-radius: 20px;
 }
 
 
@@ -404,9 +401,6 @@ main {
   margin-top: 2rem;
   padding: 1rem;
 }
-
-
-
 .voting-container {
   display: flex;
   flex-direction: row;
@@ -415,10 +409,23 @@ main {
   gap: 1rem;
   margin-top: 1rem;
   margin-bottom: 3rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+
+
+#review-votes {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  font-size: 2.5rem;
 }
 
 .comments-container {
+  margin-top: 2rem;
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -451,6 +458,10 @@ main {
   width: 100%;
 }
 
+.comments-container h3 {
+  margin-top: 1rem;
+}
+
 
 
 .comment-form {
@@ -466,10 +477,12 @@ main {
 }
 
 .delete-btn {
+  width: 5rem;
+  height: 2.5rem;
   color: white;
   background-color: rgb(78, 6, 6);
   font-weight: 700;
-  border-radius: 5px;
+  border-radius: 7px;
 }
 
 
@@ -492,16 +505,22 @@ textarea {
 }
 
 #comment-btn {
-  width: 10vw;
-  height: 5vh;
+  width: 7rem;
+  height: 3rem; 
   background-color: rgb(78, 6, 6);
   color: white;
   font-weight: 700;
-  border-radius: 10%;
+  border-radius: 10px;
+  font-size: 1rem;
+  
+}
+
+#deleting {
+  margin-bottom: 10rem;
 }
 
 #category-tag {
-  text-transform: capitalize;
+  text-transform: capitalize; 
 }
 
 #user {
@@ -525,6 +544,22 @@ textarea {
   font-weight: 700;
 }
 
+.user-profile {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem
+}
+
+.user-profile img {
+  width: 30rem;
+  height: 40rem;
+}
+
 
 
 @media only screen and (max-width: 1000px) {
@@ -535,7 +570,12 @@ textarea {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* overflow: auto; */
+    
+  }
+
+  .home {
+    margin-top: 3rem;
+    margin-bottom: 5rem;
   }
 
   ul {
@@ -555,7 +595,6 @@ textarea {
   }
 
   main {
-    /* padding: 3rem; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -608,8 +647,6 @@ textarea {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
-    /* margin-left: 1rem;
-    margin-right: 1rem; */
     
     
   }
@@ -625,7 +662,6 @@ textarea {
     margin-right: 1rem;
     grid-row-start: 1;
     grid-column-start: 3;
-    /* grid-column-end: 3; */
     display: flex;
     justify-content: right;
   }
@@ -641,7 +677,7 @@ textarea {
   
     justify-content: space-between;
     gap: 3rem;
-    /* border: 2px solid rgb(78, 6, 6) */
+
   }
 
   .button-box button {
@@ -666,34 +702,27 @@ textarea {
   }
 
   .single-card {
-    /* width: auto; */
     width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
-    /* align-items: center; */
     gap: 1rem;
     border: none;
     text-align: left;
-    /* margin-right: 1rem;
-    margin-left: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem; */
     padding: 1rem
     
   }
 
-  .single-card img {
-    /* width: 100%; */
-    border: none;
-    border-radius: none;
-    
-  }
+  
 
   .info {
     flex-direction: column-reverse;
     gap: 1rem;
+  }
+
+  .info ul {
+    margin-top: 1rem;
   }
   
 
@@ -740,19 +769,18 @@ textarea {
   }
 
   #comment-btn {
-    width: 30vw;
-    height: 5vh;
+    width: 7rem;
+    height: 3rem; 
     background-color: rgb(78, 6, 6);
     color: white;
     font-weight: 700;
   }
+
+  .user-profile img {
+    width: 20rem;
+    height: 30rem;
+  }
 }
 
 
- /* @media only screen and (min-width: 800px) and (max-width: 1000) {
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5vh;
-  }
- } */
+ 
